--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,13 +24,15 @@
     <meta property="twitter:title" content="PGS TPM" />
     <meta property="twitter:description" content="Form TPM, PT. Glostar Indonesia Sukalarang - Departement GA" />
     <meta property="twitter:image:src" content="https://siduruco.cyclic.app/img/ico/android-chrome-192x192.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png" />
-    <link rel="manifest" href="img/ico/site.webmanifest" />
-    <link rel="icon" href="img/ico/favicon-32x32.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="css/core.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../../img/ico/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../img/ico/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../img/ico/favicon-16x16.png" />
+    <link rel="manifest" href="../../img/ico/site.webmanifest" />
+    <link rel="icon" href="../../img/ico/favicon-32x32.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../../css/all.css" />
+    <link rel="stylesheet" href="../../css/core.css" />
+    <script src="../../js/core.js" type="text/javascript" defer></script>
+    <script src="../../js/module.js" type="text/javascript" defer></script>
   </head>
   <body>
     <header class="">
@@ -51,83 +53,16 @@
           <div class="collapse navbar-collapse" id="navbarExample01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/contact">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <!-- Navbar -->
-
-      <!-- Jumbotron -->
-      <!-- Carousel wrapper -->
-      <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
-        <!-- Indicators -->
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-mdb-target="#carouselBasicExample"
-            data-mdb-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-
-        <!-- Inner -->
-        <div class="carousel-inner">
-          <!-- Single item -->
-          <div class="carousel-item active">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100" alt="Sunset Over the City" />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-          </div>
-
-          <!-- Single item -->
-          <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100" alt="Canyon at Nigh" />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-
-          <!-- Single item -->
-          <div class="carousel-item">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-          </div>
-        </div>
-        <!-- Inner -->
-
-        <!-- Controls -->
-        <button class="carousel-control-prev" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <!-- Carousel wrapper -->
-      <!-- Jumbotron -->
     </header>
     <main class="py-5">
       {{{body}}}
@@ -159,6 +94,5 @@
       </div>
     </footer>
   </body>
-  <script src="js/core.js" type="text/javascript"></script>
-  <script src="js/module.js" type="text/javascript"></script>
+
 </html>
