--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -3,54 +3,59 @@
     <a class="btn btn-primary" href="/contact/add">Add</a>
   </div>
   <div class="card-body">
-    <table class="table table-hover table-sm">
-      <thead>
-        <tr>
-          {{#each column}}
-            <th scope="col" style="text-transform:capitalize;" class="fw-bold h5">
-              {{this}}
-            </th>
-          {{/each}}
-        </tr>
-      </thead>
-      <tbody>
-        {{#each row}}
+    <div class="table-responsive">
+      <table class="table table-hover table-sm">
+        <thead>
           <tr>
-            {{#each data}}
-              {{#if (ifStatus this)}}
-                <th style="text-transform:capitalize;">
-                  {{this}}
-                </th>
-              {{/if}}
+            {{#each column}}
+              <th scope="col" style="text-transform:capitalize;" class="fw-bold h5">
+                {{this}}
+              </th>
             {{/each}}
-            <th>
-              <div class="form-check form-switch">
-                {{#if (isTrue status)}}
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    role="switch"
-                    id="switchStatus{{id}}"
-                    checked
-                    onchange="location.href = `${location.pathname}?edit={{id}}`"
-                    onclick="this.setAttribute('disabled', 'disabled')"
-                  />
-                {{else}}
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    role="switch"
-                    id="switchStatus{{id}}"
-                    onchange="location.href = `${location.pathname}?edit={{id}}`"
-                    onclick="this.setAttribute('disabled', 'disabled')"
-                  />
-                {{/if}}
-              </div>
-            </th>
           </tr>
-        {{/each}}
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          {{#each row}}
+            <tr>
+              {{#each data}}
+                {{#if (ifStatus this)}}
+                  <th style="text-transform:capitalize;">
+                    {{this}}
+                  </th>
+                {{/if}}
+              {{/each}}
+              <th>
+                <!-- Button trigger modal -->
+                <div class="form-check form-switch">
+                  {{#if (isTrue status)}}
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      role="switch"
+                      id="switchStatus{{id}}"
+                      checked
+                      onchange="location.href = `${location.pathname}?edit={{id}}`"
+                      data-mdb-toggle="modal"
+                      data-mdb-target="#alertModal"
+                    />
+                  {{else}}
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      role="switch"
+                      id="switchStatus{{id}}"
+                      onchange="location.href = `${location.pathname}?edit={{id}}`"
+                      data-mdb-toggle="modal"
+                      data-mdb-target="#alertModal"
+                    />
+                  {{/if}}
+                </div>
+              </th>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
     <script src="../../js/contact.js" type="module"></script>
   </div>
   <div class="card-footer d-flex justify-content-end">
